--- a/FloatingActionButton/FloatingActionButton/Base.lproj/Main.storyboard
+++ b/FloatingActionButton/FloatingActionButton/Base.lproj/Main.storyboard
@@ -28,9 +28,10 @@
                                         </constraints>
                                         <color key="tintColor" systemColor="systemRedColor"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain">
+                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="일정" imagePadding="10">
                                             <imageReference key="image" image="calendar.circle.fill" catalog="system" renderingMode="template"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="50"/>
+                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="12"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="scheduleButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fdU-8a-dHs"/>
@@ -44,9 +45,10 @@
                                         </constraints>
                                         <color key="tintColor" systemColor="systemYellowColor"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain">
+                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="할 일" imagePadding="10">
                                             <imageReference key="image" image="checkmark.circle.fill" catalog="system" renderingMode="template"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="50"/>
+                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="12"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="todoButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="V8t-V3-Fpv"/>
@@ -60,9 +62,10 @@
                                         </constraints>
                                         <color key="tintColor" systemColor="systemGreenColor"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain">
+                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="top" title="일기" imagePadding="10">
                                             <imageReference key="image" image="pencil.circle.fill" catalog="system" renderingMode="template"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="50"/>
+                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="12"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="diaryButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RwL-1T-rsw"/>
