--- a/FloatingActionButton/FloatingActionButton/Schedule.storyboard
+++ b/FloatingActionButton/FloatingActionButton/Schedule.storyboard
@@ -39,21 +39,43 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시작 : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wb-tG-VKW">
-                                <rect key="frame" x="20" y="189.5" width="43" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="20" y="189.5" width="49.5" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Brt-mw-mip"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="yyyy-MM-dd" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1W-qM-kW0">
-                                <rect key="frame" x="70" y="189.5" width="99.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="Q8T-pe-7eS">
+                                <rect key="frame" x="69" y="189" width="225" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="TPt-aG-GxK"/>
+                                    <constraint firstAttribute="width" constant="225" id="eiN-x1-2jJ"/>
+                                </constraints>
+                                <locale key="locale" localeIdentifier="ko"/>
+                                <connections>
+                                    <action selector="changeStartDate:" destination="Y6W-OH-hqX" eventType="valueChanged" id="Mws-RG-Zdr"/>
+                                </connections>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="종료 : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aGe-ZB-5uE" userLabel="종료 :">
+                                <rect key="frame" x="20" y="239.5" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="6Wc-e0-1gR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Q8T-pe-7eS">
-                                <rect key="frame" x="20" y="235" width="374" height="216"/>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="Zfz-Pi-9FS">
+                                <rect key="frame" x="70" y="239.5" width="225" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="FQd-jE-2gz"/>
+                                    <constraint firstAttribute="width" constant="225" id="mbm-gT-68a"/>
+                                </constraints>
+                                <locale key="locale" localeIdentifier="ko"/>
                                 <connections>
-                                    <action selector="changeDatePicker:" destination="Y6W-OH-hqX" eventType="valueChanged" id="GBM-BN-Ltc"/>
+                                    <action selector="changeExitDate:" destination="Y6W-OH-hqX" eventType="valueChanged" id="LoA-Sd-rZg"/>
                                 </connections>
                             </datePicker>
                         </subviews>
@@ -63,22 +85,22 @@
                             <constraint firstItem="8Wi-az-oNs" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="1IN-c1-i2F"/>
                             <constraint firstItem="q2K-rR-vGn" firstAttribute="top" secondItem="equ-8c-1qj" secondAttribute="bottom" constant="20" id="5tF-Xj-zoJ"/>
                             <constraint firstItem="0wb-tG-VKW" firstAttribute="top" secondItem="q2K-rR-vGn" secondAttribute="bottom" constant="20" id="8V5-Sd-yyj"/>
-                            <constraint firstItem="A1W-qM-kW0" firstAttribute="top" secondItem="0wb-tG-VKW" secondAttribute="top" id="Cdc-1p-Uc1"/>
-                            <constraint firstItem="Q8T-pe-7eS" firstAttribute="leading" secondItem="0wb-tG-VKW" secondAttribute="leading" id="Cxu-wB-CUz"/>
+                            <constraint firstItem="aGe-ZB-5uE" firstAttribute="top" secondItem="0wb-tG-VKW" secondAttribute="bottom" constant="20" id="EoP-Bu-3j9"/>
                             <constraint firstItem="equ-8c-1qj" firstAttribute="top" secondItem="8Wi-az-oNs" secondAttribute="top" id="KaE-Hd-5R9"/>
                             <constraint firstItem="equ-8c-1qj" firstAttribute="leading" secondItem="8Wi-az-oNs" secondAttribute="trailing" constant="10" id="OSK-8M-KPu"/>
+                            <constraint firstItem="Zfz-Pi-9FS" firstAttribute="leading" secondItem="aGe-ZB-5uE" secondAttribute="trailing" id="Tnj-tb-a7F"/>
+                            <constraint firstItem="aGe-ZB-5uE" firstAttribute="leading" secondItem="0wb-tG-VKW" secondAttribute="leading" id="Udo-cN-MDU"/>
                             <constraint firstItem="0wb-tG-VKW" firstAttribute="leading" secondItem="q2K-rR-vGn" secondAttribute="leading" id="VQl-l4-LXM"/>
-                            <constraint firstItem="Q8T-pe-7eS" firstAttribute="top" secondItem="0wb-tG-VKW" secondAttribute="bottom" constant="24.5" id="dvx-GW-Dco"/>
+                            <constraint firstItem="Q8T-pe-7eS" firstAttribute="leading" secondItem="0wb-tG-VKW" secondAttribute="trailing" id="fZn-2E-87l"/>
                             <constraint firstItem="8Wi-az-oNs" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="ffg-29-PYC"/>
-                            <constraint firstItem="Q8T-pe-7eS" firstAttribute="trailing" secondItem="q2K-rR-vGn" secondAttribute="trailing" id="lJT-YL-SKb"/>
-                            <constraint firstItem="A1W-qM-kW0" firstAttribute="leading" secondItem="0wb-tG-VKW" secondAttribute="trailing" constant="7" id="xbm-uK-bVk"/>
+                            <constraint firstItem="Q8T-pe-7eS" firstAttribute="top" secondItem="0wb-tG-VKW" secondAttribute="top" id="rEy-Bf-2OI"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="q2K-rR-vGn" secondAttribute="trailing" constant="20" id="xlQ-0E-IOU"/>
+                            <constraint firstItem="Zfz-Pi-9FS" firstAttribute="top" secondItem="aGe-ZB-5uE" secondAttribute="top" id="yJ5-PI-PX7"/>
                             <constraint firstItem="q2K-rR-vGn" firstAttribute="leading" secondItem="8Wi-az-oNs" secondAttribute="leading" id="zBy-Mn-MkB"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="startDateLabel" destination="A1W-qM-kW0" id="c9N-lW-ZVj"/>
-                        <outlet property="titleLabel" destination="q2K-rR-vGn" id="jXR-2H-nHz"/>
+                        <outlet property="titleLabel" destination="q2K-rR-vGn" id="BZa-qN-Mfl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
