진짜 수정 끝 내일 주석 달자..

--- a/FloatingActionButton/FloatingActionButton/Diary.storyboard
+++ b/FloatingActionButton/FloatingActionButton/Diary.storyboard
@@ -54,7 +54,7 @@
                                 </constraints>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                             </textView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="q2I-cm-FKj">
                                 <rect key="frame" x="132" y="403.5" width="150" height="99"/>
